2008-08-08  Sebastien Pouliot  <sebastien@ximian.com>

	* CecilMetadata.cs: Don't recurse on BaseType when looking at 
	interfaces, otherwise we end up with a lot of extras (compared to 
	the XML definition). Process private methods that are implementing 
	an explicit interface requirement. Add NotSerialized to the 
	FieldAttributes mask. 
	* MasterMetadata.cs: Add NonSerializedAttribute to ShouldSkipAttribute
	since this pseudo-attribute is part of the XML definition. Add 
	FamORAssem checks (replace by Family) since this introduce false 
	errors in the reports (we don't care about the internal/assembly part)
	* Masterinfo.cs: Fix bad check with FamORAssem that turned private
	stuff into Family.

2008-06-04  Jb Evain  <jbevain@novell.com>

	* CecilMetadata.cs (CecilUtils.GetCustomAttributes): don't
	crash if the custom attribute constructor's declaring type
	can not be resolved.

2008-06-04  Jb Evain  <jbevain@novell.com>

	* InfoManager.cs: System.Xml.Core is renamed to System.Xml
	in SL 2.0b.

2008-02-10  Chris Toshok  <toshok@ximian.com>

	[ Fix a couple of bugs reported by jpobst ]
	
	* CecilMetadata.cs (CecilProperty.ctor): we can't just use the
	name - multiple "Item" properties were screwing things up.
	(CecilProperty.FormatName): format the name for display and for
	comparison against the masterinfo.  Masterinfo version is "Type
	Name [ param-types ]", and display version if "Name [
	param-types]" (including the type in the display version made it a
	little hard to actually see what the name of the property was.)
	(CecilField.GetMemberAccess): convert FamORAssem to just Family.
	(CecilMethod.GetMemberAccess): same.

	* MasterMetadata.cs (MasterProperty.ctor): we need to format the
	name based on the key, not on the name attribute alone.
	(MasterProperty.FormatName): format the name to match up with
	CecilProperty.FormatName.
	
2008-02-07  Stephane Delcroix  <sdelcroix@novell.com>

	* MainWindow.cs: move the LoadConfiguration part at the end of
	the ctor.
